--- a/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -1,6 +1,5 @@
 /*
   File origin: VS1LAB A1b  
-
   CSS style is BEM. Classes used for CSS, IDs for JavaScript querying (future use).
   CSS variables used for clarity and themability (e.g. through SSR). 
   Inherited box sizing used for ease of including 3rd party content-box components.
@@ -46,7 +45,9 @@ a {
 
 /* ### TODO ### Styles for other HTML elements */
 
-/* ... your code here ... */
+body.h2 {
+  font: "Times New Roman", Times, serif;
+}
 
 
 /* Grid styles (no changes required) */
@@ -109,29 +110,117 @@ a {
 
 /* ### TODO ### Styles for Header Component */
 
-/* ... your code here ... */
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3% 2%;
+  background-color: var(--background-color);
+  border-bottom: 1px solid var(--border-color);
+}
+
+header img{
+  width: 5%;
+  height: relative;
+}
 
 
 /* ### TODO ### Styles for Main Component */
+.main{
+  padding: 3%;
+  display: flex;
+}
 
-/* ... your code here ... */
-
+h2{
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
+}
 
 /* ### TODO ### Styles for Tagging component */
 
-/* ... your code here ... */
+fieldset{
+  padding: 1rem;
+  margin: 0.5rem;
+}
 
+legend{
+  margin-left: 0.5rem;
+}
+
+.tagging input {
+  height: 70%;
+  padding: 5%;
+  margin: 2% 0 0 0;
+  
+}
+
+.tagging label {
+  padding: 2% 0 0 0;
+  color: #666;
+  
+}
+
+.tagging-content{
+  display: grid;
+  grid-template-columns: auto;
+  padding: 0% 4%;
+}
 
 /* ### TODO ### Styles for Discovery component */
+.discovery__wrapper{
+  display: flex;
+  justify-content: space-between;
+}
 
-/* ... your code here ... */
+.discovery-content{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 
+.discovery-content label{
+  margin-bottom: 1%;
+  color: #666;
+}
+
+.discovery-content input{
+  margin-bottom: 2%;
+  height: 2rem;
+  width: 15rem;
+}
+
+.discovery__results li {
+  display: block;
+  padding: 8% 5% 8% 2%;
+  margin: 10% 0  2% 2%;
+  background-color: var(--background-color);
+  color: var(--link-color);
+  border: 1px solid var(--border-color);
+}
+
+.discovery__map{
+  display: flex;
+  margin-top: 3%;
+  flex-direction: column;
+  padding-right: 0.5rem;
+}
 
 /* ### TODO ### Styles for Footer Component */
-
-/* ... your code here ... */
+footer{
+  padding: 3% 2%;
+  background-color: var(--background-color);
+  border-top: 1px solid var(--border-color);
+}
 
 
 /* ### TODO ### Media Queries */
 
-/* ... your code here ... */
+@media  (max-width: 768px) {
+  .main {
+    flex-direction:column;
+  }
+
+  .discovery__wrapper {
+    flex-direction:column;
+  }
+}
